kubernetes/media/jellyfin/05-deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
      # annotations:
      #   container.apparmor.security.beta.kubernetes.io/jellyfin: unconfined
    spec:
      nodeSelector:
        kubernetes.io/hostname: andres-worker-intel
      securityContext:
        fsGroup: 1056
        fsGroupChangePolicy: OnRootMismatch               
        supplementalGroups: [44, 992] # acceso a /dev/dri (video y GID 992)
        # seccompProfile:
        #   type: Unconfined
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.11
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/videos
              subPath: movies
              readOnly: true
            - name: media
              mountPath: /data/series
              subPath: tv
              readOnly: true
            - name: transcode
              mountPath: /transcode
            - name: cache
              mountPath: /cache
            - name: dev-dri
              mountPath: /dev/dri
              readOnly: true
          resources:
            requests:
              cpu: "800m"
              memory: "1Gi"
            limits:
              memory: "4Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: media-root
        - name: transcode
          emptyDir: {}               # SSD local del nodo (ephemeral, rápido)
        - name: cache
          emptyDir:
            medium: Memory           # cache en RAM 
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
