kubernetes/media/jellyfin/06-svc-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
