kubernetes/media/jellyfin/10-ingress-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.khazadlab.es`)
      kind: Rule
      middlewares:
        - name: default-headers-media   
          namespace: media              
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: tls-khazadlab-wildcard
